# podcast-cli

./: .env.example  .gitignore  AGENTS.md  README.md  debug.text  pyproject.toml
src/: cli.py  config.py  download.py  itunes.py  markdown.py  rss.py  transcribe.py
src/config/: __init__.py  schema.py
src/core/: __init__.py  downloader.py  itunes_search.py  llm_structurer.py  markdown.py  rss_parser.py  transcriber.py
src/utils/: __init__.py
tests/: conftest.py
tests/unit/: test_config.py  test_utils.py
